# nagraj

./: .coveragerc  .gitignore  README.md  codecov.yml  mypy.ini  pyproject.toml
.github/workflows/: publish.yml  test.yml
nagraj/cli/: main.py
nagraj/cli/commands/: add.py  context.py  domain.py  new.py  remove.py
nagraj/config/: schema.py  settings.py
nagraj/core/: logging.py  project.py  template.py
nagraj/templates/context/{{cookiecutter.context_name}}/application/commands/: __init__.py
nagraj/templates/context/{{cookiecutter.context_name}}/application/queries/: __init__.py
nagraj/templates/context/{{cookiecutter.context_name}}/domain/entities/: __init__.py
nagraj/templates/context/{{cookiecutter.context_name}}/domain/value_objects/: __init__.py
nagraj/templates/context/{{cookiecutter.context_name}}/infrastructure/: __init__.py
nagraj/templates/context/{{cookiecutter.context_name}}/infrastructure/migrations/: __init__.py
nagraj/templates/domain/: cookiecutter.json
nagraj/templates/domain/{{cookiecutter.domain_name}}/: __init__.py
nagraj/templates/entity/: {{cookiecutter.entity_name}}.py
nagraj/templates/project/: cookiecutter.json
nagraj/templates/project/{{cookiecutter.project_name}}/: pyproject.toml
tests/: conftest.py
tests/cli/: test_add.py  test_context.py  test_domain.py  test_new.py  test_remove.py  test_validate.py
tests/config/: test_schema.py
tests/core/: test_project.py
tests/unit/cli/: test_main.py
tests/unit/cli/commands/: test_init.py
tests/unit/core/: test_logging.py
(+6 files in other folders)
