[tool.poetry]
name = "nagraj"
version = "0.1.0"
description = "A CLI tool for generating DDD/CQRS microservices applications"
authors = ["Abhishek Pathak <writetokumar@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nagraj" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
jinja2 = "^3.1.5"
cookiecutter = "^2.6.0"
rich = "^13.9.4"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.9.1"

[tool.poetry.scripts]
nagraj = "nagraj.cli.main:cli"

[tool.ruff]
exclude = ["**/nagraj/templates"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
